// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> 1`] = `
<ScaleOfSignificanceListEditor
  errorText={null}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> with error attributes 1`] = `
<ScaleOfSignificanceListEditor
  error="test"
  errorText="test"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  meta={
    Object {
      "error": "test",
    }
  }
  onChange={[MockFunction]}
/>
`;
